cmake_minimum_required(VERSION 3.9)
project(corewar)

set(CMAKE_CXX_STANDARD 11)

add_executable(corewar
        ft_printf/includes/ft_printf.h
        ft_printf/libft/checkintstr.c
        ft_printf/libft/ft_atoi.c
        ft_printf/libft/ft_atoi_base.c
        ft_printf/libft/ft_atou_base.c
        ft_printf/libft/ft_bzero.c
        ft_printf/libft/ft_fcd.c
        ft_printf/libft/ft_foreach.c
        ft_printf/libft/ft_isalnum.c
        ft_printf/libft/ft_isalpha.c
        ft_printf/libft/ft_isascii.c
        ft_printf/libft/ft_isdigit.c
        ft_printf/libft/ft_islowercase.c
        ft_printf/libft/ft_isprint.c
        ft_printf/libft/ft_isuppercase.c
        ft_printf/libft/ft_iswhitespace.c
        ft_printf/libft/ft_itoa.c
        ft_printf/libft/ft_itoa_base.c
        ft_printf/libft/ft_itoc.c
        ft_printf/libft/ft_lstadd.c
        ft_printf/libft/ft_lstdel.c
        ft_printf/libft/ft_lstdelcont.c
        ft_printf/libft/ft_lstdelone.c
        ft_printf/libft/ft_lstiter.c
        ft_printf/libft/ft_lstmap.c
        ft_printf/libft/ft_lstnew.c
        ft_printf/libft/ft_memalloc.c
        ft_printf/libft/ft_memccpy.c
        ft_printf/libft/ft_memchr.c
        ft_printf/libft/ft_memcmp.c
        ft_printf/libft/ft_memcpy.c
        ft_printf/libft/ft_memdel.c
        ft_printf/libft/ft_memmove.c
        ft_printf/libft/ft_memset.c
        ft_printf/libft/ft_module.c
        ft_printf/libft/ft_pow.c
        ft_printf/libft/ft_putchar.c
        ft_printf/libft/ft_putchar_fd.c
        ft_printf/libft/ft_putendl.c
        ft_printf/libft/ft_putendl_fd.c
        ft_printf/libft/ft_putnbr.c
        ft_printf/libft/ft_putnbr_fd.c
        ft_printf/libft/ft_putnendl.c
        ft_printf/libft/ft_putnendl_fd.c
        ft_printf/libft/ft_putnstr.c
        ft_printf/libft/ft_putnstr_fd.c
        ft_printf/libft/ft_putstr.c
        ft_printf/libft/ft_putstr_fd.c
        ft_printf/libft/ft_range.c
        ft_printf/libft/ft_root.c
        ft_printf/libft/ft_strcat.c
        ft_printf/libft/ft_strchr.c
        ft_printf/libft/ft_strclr.c
        ft_printf/libft/ft_strcmp.c
        ft_printf/libft/ft_strcpy.c
        ft_printf/libft/ft_strdel.c
        ft_printf/libft/ft_strdup.c
        ft_printf/libft/ft_strequ.c
        ft_printf/libft/ft_striter.c
        ft_printf/libft/ft_striteri.c
        ft_printf/libft/ft_strjoin.c
        ft_printf/libft/ft_strlcat.c
        ft_printf/libft/ft_strlen.c
        ft_printf/libft/ft_strmap.c
        ft_printf/libft/ft_strmapi.c
        ft_printf/libft/ft_strncat.c
        ft_printf/libft/ft_strncmp.c
        ft_printf/libft/ft_strncpy.c
        ft_printf/libft/ft_strnequ.c
        ft_printf/libft/ft_strnew.c
        ft_printf/libft/ft_strnjoin.c
        ft_printf/libft/ft_strnstr.c
        ft_printf/libft/ft_strrchr.c
        ft_printf/libft/ft_strsplit.c
        ft_printf/libft/ft_strstr.c
        ft_printf/libft/ft_strsub.c
        ft_printf/libft/ft_strtrim.c
        ft_printf/libft/ft_swap.c
        ft_printf/libft/ft_tolower.c
        ft_printf/libft/ft_toupper.c
        ft_printf/libft/ft_utoa_base.c
        ft_printf/libft/get_next_line.c
        ft_printf/libft/libft.h
        ft_printf/src/fill_fl_struct.c
        ft_printf/src/ft_printf.c
        ft_printf/src/get_argument.c
        ft_printf/src/indent_and_print_char.c
        ft_printf/src/indent_and_print_integer.c
        ft_printf/src/indent_and_print_string.c
        ft_printf/src/indent_and_print_wide_string.c
        ft_printf/src/parseconvstr.c
        ft_printf/src/print_the_bit.c
        ft_printf/libftprintf.h
        ft_printf/unittest.cpp
        includes/op.h
        src/asm/includes/asm.h
        src/asm/src/main.c
        src/common/common.c
        src/vm/includes/vm.h
        src/vm/src/operations/add.c
        src/vm/src/operations/aff.c
        src/vm/src/operations/and.c
        src/vm/src/operations/ld.c
        src/vm/src/operations/ldi.c
        src/vm/src/operations/lfork.c
        src/vm/src/operations/live.c
        src/vm/src/operations/lld.c
        src/vm/src/operations/lldi.c
        src/vm/src/operations/op_fork.c
        src/vm/src/operations/or.c
        src/vm/src/operations/st.c
        src/vm/src/operations/sti.c
        src/vm/src/operations/sub.c
        src/vm/src/operations/xor.c
        src/vm/src/operations/zjmp.c
        src/vm/src/args_parsing.c
        src/vm/src/carriage.c
        src/vm/src/carriage_utils.c
        src/vm/src/errors.c
        src/vm/src/fill_the_map.c
        src/vm/src/main_cycle_funcs.c
        src/vm/src/utils.c
        src/vm/src/visuzlizer.c
        src/vm/src/vm.c)
